# sip_event_processor

./: CMakeLists.txt
config/: sip_processor.conf
include/common/: config.h  logger.h  slow_event_logger.h  types.h
include/dispatch/: dialog_dispatcher.h  dialog_worker.h  stale_subscription_reaper.h
include/http/: health_handler.h  http_server.h  stats_handler.h
include/persistence/: mongo_client.h  subscription_store.h
include/presence/: call_state_event.h  presence_event_router.h  presence_failover_manager.h  presence_tcp_client.h  presence_xml_parser.h
include/sip/: sip_callback_handler.h  sip_dialog_id.h  sip_event.h  sip_stack_manager.h
include/subscription/: blf_processor.h  blf_subscription_index.h  mwi_processor.h  subscription_state.h  subscription_type.h
src/: main.cpp
src/common/: config.cpp  logger.cpp  slow_event_logger.cpp
src/dispatch/: dialog_dispatcher.cpp  dialog_worker.cpp  stale_subscription_reaper.cpp
src/http/: health_handler.cpp  http_server.cpp  stats_handler.cpp
src/persistence/: mongo_client.cpp  subscription_store.cpp
src/presence/: presence_event_router.cpp  presence_failover_manager.cpp  presence_tcp_client.cpp  presence_xml_parser.cpp
src/sip/: sip_callback_handler.cpp  sip_dialog_id.cpp  sip_event.cpp  sip_stack_manager.cpp
src/subscription/: blf_processor.cpp  blf_subscription_index.cpp  mwi_processor.cpp  subscription_state.cpp
tests/: test_blf_subscription_index.cpp  test_config.cpp  test_dialog_id_builder.cpp  test_mwi_parser.cpp  test_presence_failover.cpp  test_presence_xml_parser.cpp  test_slow_event_logger.cpp
tests/perf/: load_test_blf_index.cpp  load_test_dispatcher.cpp  load_test_http_api.sh  load_test_presence_parser.cpp  presence_flood.py  sipp_blf_scenario.xml
